# microstructure

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  index.html  microstructure.hpp
.devcontainer/: .dockerignore  Dockerfile
.github/workflows/: cmake.yml  macos.yml  ubuntu.yml  windows.yml
.microstructure/: build.sh
applications/: CMakeLists.txt  metal.cpp
benchmarks/: CMakeLists.txt  microstructure_benchmark.cpp
conventions/: README.md
doc/: README.md
include/microstructure/: forward.hpp  microstructure.hpp  version.hpp
lib/learner/: CMakeLists.txt
lib/learner/include/learner/: learner.hpp  version.hpp
lib/learner/src/: learner.cpp
lib/learner/test/: CMakeLists.txt  learner.test.cpp
lib/solver/: CMakeLists.txt
lib/solver/include/solver/: solver.hpp  version.hpp
lib/solver/src/: solver.cpp
lib/solver/test/: CMakeLists.txt  solver.test.cpp
lib/subroutine/: CMakeLists.txt
lib/subroutine/include/subroutine/: subroutine.hpp  version.hpp
lib/subroutine/src/: subroutine.cpp
lib/subroutine/test/: CMakeLists.txt  subroutine_test.cpp
research/codes/: microstructure.cpp
scripts/: automate.sh
src/: microstructure.cpp
standalone/front/: CMakeLists.txt  README.md  front.cpp
test/: CMakeLists.txt  microstructure_test.cpp
tools/: README.md
tools/tool/: CMakeLists.txt
tools/tool/include/tool/: tool.hpp  version.hpp
tools/tool/src/: tool.cpp
tools/tool/test/: CMakeLists.txt  tool.test.cpp
utilities/: README.md
utilities/utl/: CMakeLists.txt
utilities/utl/include/utl/: utl.hpp  version.hpp
utilities/utl/src/: utl.cpp
utilities/utl/test/: CMakeLists.txt  utl.test.cpp
vmicrostructure/: .gitignore  CMakeLists.txt  vmetal.cpp  vmicrostructure.hpp
vmicrostructure/vscripts/: vautomate.sh
xmicrostructure/: .gitignore  CMakeLists.txt  README.md
xmicrostructure/xapplications/: CMakeLists.txt  xmetal.cpp
xmicrostructure/xinclude/xmicrostructure/: xcore.hpp  xforward.hpp  xmicrostructure.hpp  xversion.hpp
xmicrostructure/xinclude/xmicrostructure/xconstant/: xchemical.hpp  xconstant.hpp
xmicrostructure/xinclude/xmicrostructure/xcore/: xcore.hpp  xdefinition.hpp  xkernel.hpp  xmesh.hpp  xtensor.hpp
xmicrostructure/xscripts/: xautomate.sh
xmicrostructure/xsrc/: xmicrostructure.cpp  xsimulation.cpp  xvisualisation.cpp
xmicrostructure/xsrc/xsimulation/: xsimulation.cpp
xmicrostructure/xsrc/xvisualisation/: xvisualisation.cpp
xmicrostructure/xtest/: CMakeLists.txt  xmicrostructure_test.cpp
xmicrostructure/xutilities/xformatter/: xformatter.hpp
zmicrostructure/: .gitignore  CMakeLists.txt  README.md
zmicrostructure/zapplications/: CMakeLists.txt  zmetal.cpp
zmicrostructure/zinclude/zmicrostructure/: zlocation.hpp  zmicrostructure.hpp
zmicrostructure/zscripts/: zbuild.sh
zmicrostructure/ztest/: CMakeLists.txt  zlocation.test.cpp  zmicrostructure.test.cpp
